<resources>
    <string name="app_name">FindaDev</string>
    <string name="explore_talents">Explore Talents</string>
    <string name="register">Register</string>
    <string name="title_text">Register details to get Hired or connected</string>
    <string name="full_name">Full Name</string>
    <string name="register_btn">REGISTER</string>
    <string name="email_address">Email Address</string>
    <string name="portfolio_link">Link to portfolio</string>
    <string name="tech_stack">Select your stack</string>
    <string name="img_desc">Just a placeholder for picture</string>
    <string name="job_type">Select Job type you\'re interested in</string>
    <string name="connect_with_dev">Connect with Dev</string>
    <string name="view_portfolio">View Portfolio</string>
    <string name="dev_details">Dev Details</string>
    <string name="dev_reg">Register</string>
    <string name="meet_dev">Explore Talents</string>
    <string name="validation_msg">Error validating your input, please verify</string>
    <string name="email_subject">Will you be interested to work at/with [COMPANY/TEAM NAME]</string>
</resources>